创建JVM问题demo